<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.DishEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dish_title_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/head_dishTitle"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/enter_dish_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dish_title_head"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/information_enter_title_dish"/>

        <LinearLayout
            android:id="@+id/book_headFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_dish_title"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/book_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="sans-serif-medium"
                android:text="@string/head_bookName"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/site_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/head_bookSite"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/book_editFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_headFields"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/book_title_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/information_enter_booktitle"
                android:layout_weight="1.4" />

            <EditText
                android:id="@+id/book_site_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/information_enter_book_site"
                android:inputType="number" />

        </LinearLayout>

        <TextView
            android:id="@+id/weblink_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/book_editFields"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/head_weblink"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/weblink_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weblink_head"
            android:hint="@string/information_enter_weblink"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/personsThatLikeDish_Head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/weblink_editText"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/head_likedByPersons"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/personsThatLikeDish_List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/personsThatLikeDish_Head"
            android:layout_margin="8dp">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/show_RecipeInWeb"
            android:onClick="showRecipeInWeb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/personsThatLikeDish_List"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_showRecipeInWeb" />

        <Button
            android:id="@+id/delete_Dish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_RecipeInWeb"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_red_dark"
            android:onClick="deleteDish"
            android:text="@string/bn_delete_dish"
            android:textColor="@color/defaultWhite" />
    </RelativeLayout>

</ScrollView>