<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.PersonEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/person_name_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/head_personName"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/person_enter_person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_name_head"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:autofillHints="@string/information_please_enter_person_name"
            android:hint="@string/information_please_enter_person_name"
            android:inputType="textPersonName"
            android:paddingLeft="8dp"
            android:paddingRight="8dp" />

        <TextView
            android:id="@+id/person_notLikedIngredients_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_enter_person_name"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/head_notLikedIngredients"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/notLikedIngredients_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_notLikedIngredients_head"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText_notLikedIngredient1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/information_enter_notLikedIngredient"
                android:inputType="text" />

            <EditText
                android:id="@+id/editText_notLikedIngredient2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/information_enter_notLikedIngredient"
                android:inputType="text" />

            <EditText
                android:id="@+id/editText_notLikedIngredient3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/information_enter_notLikedIngredient"
                android:inputType="text" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_add_fields_for_notLikedIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notLikedIngredients_fields"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@+id/btn_add_fields_for_notLikedIngredients"
            android:onClick="btnAddFieldsToNotLikedIngredients"
            android:src="@drawable/ic_add_circle_outline_black_24dp" />

        <!--
        <Button
            android:id="@+id/btn_add_fields_for_notLikedIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/notLikedIngredients_fields"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:text="@string/btn_add_fields_for_notLikedIngredients" />-->

        <Button
            android:id="@+id/btn_delete_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_add_fields_for_notLikedIngredients"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/holo_red_dark"
            android:padding="16dp"
            android:text="@string/btn_delete_person"
            android:onClick="deletePerson"
            android:textColor="@color/defaultWhite" />

    </RelativeLayout>





</ScrollView>